--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="../css/pure-min.css">
-    <link rel="stylesheet" href="../css/grids-responsive-min.css">
-    <link rel="stylesheet" href="../css/site_1_24_21.css">
+    <link rel="stylesheet" href="css/pure-min.css">
+    <link rel="stylesheet" href="css/grids-responsive-min.css">
+    <link rel="stylesheet" href="css/site_1_24_21.css">
 </head>
 <body>
     <div class="pure-g">
@@ -21,7 +21,7 @@
         <div class="pure-u-1 pure-u-md-1-6"></div>
         <div class="pure-u-1 pure-u-md-1-3">
             <div id="profile" class="container-title">
-                <img src="../img/profile.jpg" class="pure-img">
+                <img src="img/profile.jpg" class="pure-img">
                 <div class="maintitle-bg centered"></div>
             </div>         
         </div>
@@ -32,7 +32,7 @@
                     <p class="text-center">Louise Foucar Marshall Professor (retired)</p>
                     <p class="text-center">Professor, Department of Ecology and Evolutionary Biology and Laboratory of Tree Ring Research (2011-2020)</p>
                     <div class="text-center">
-                        <a id="cv-btn" class="pure-button" href="../docs/Monson_CV_2020.pdf" target="_blank">Curriculum Vitae</a>
+                        <a id="cv-btn" class="pure-button" href="docs/Monson_CV_2020.pdf" target="_blank">Curriculum Vitae</a>
                     </div>
                 </div>     
             </div>  
@@ -61,7 +61,7 @@
         </div>
         <div class="pure-u-1 pure-u-md-1-3 hide-desktop">    
             <div class="container-title">
-                <img id="research" src="../img/lab.jpg" class="pure-img">
+                <img id="research" src="img/lab.jpg" class="pure-img">
                 <div class="title-bg centered">
                     <h2 class="centered">Research Interests</h2>
                 </div>           
@@ -78,7 +78,7 @@
         </div>   
         <div class="pure-u-1 pure-u-md-1-3 hide-desktop">
             <div class="container-title">
-                <img id="research" src="../img/colorado.png" class="pure-img">
+                <img id="research" src="img/colorado.png" class="pure-img">
                 <div class="title-bg centered">
                     <h2 class="centered">Past Appointments</h2>
                 </div>
@@ -121,7 +121,7 @@
         </div>
         <div class="pure-u-1 pure-u-md-1-3 hide-desktop">
             <div class="container-title">
-                <img id="research" src="../img/award.jpg" class="pure-img">
+                <img id="research" src="img/award.jpg" class="pure-img">
                 <div class="title-bg centered">
                     <h2 class="centered">Awards</h2>
                 </div>
